--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="alg">
-<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark" >
+<nav class="navbar navbar-expand-lg navbar navbar-primary bg-primary" >
   <div class="container-fluid">
     
    
