--- a/src/app/singup/singup.component.html
+++ b/src/app/singup/singup.component.html
@@ -1,7 +1,7 @@
 <div class="alg">
-<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark " >
+<nav class="navbar navbar-expand-lg navbar navbar-primary bg-primary " >
   
-    <p class="copyright mx-auto" >Tous droits réservés © 2021</p> 
+    <p class="copyright mx-auto" >Tous droits réservés © 2022</p> 
     
 </nav>
 <div>
