--- a/src/app/ajout-etudiant/ajout-etudiant.component.html
+++ b/src/app/ajout-etudiant/ajout-etudiant.component.html
@@ -1,7 +1,7 @@
 
 
 	<div class="col" id="d">
-      <div class="p-3 border bg-secondary"><h3 align="center">Liste des etudiant</h3>
+      <!--<div class="p-3 border bg-secondary">--><h3 align="center">Liste des etudiant</h3>
           
           <table class="table">
 			  <thead>
@@ -34,7 +34,7 @@
 			  </tbody>
 			</table>
 		 	
-      </div>
+      <!--</div>-->
     </div>
 
 			
