des modifications page d'acceill et navbar et sidebar

--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -6,8 +6,8 @@
     margin-right: 5%;
 }
 h4 {
-    color: blanchedalmond;
+    color: rgb(68, 142, 226);
 }
 label{
-    color: blanchedalmond;
+    color: rgb(68, 142, 226);
 }
