--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,6 +1,5 @@
 
-<br>
-<div class="p-3 border bg-secondary" id="d">
+<div class="p-3 border bg-light" id="d" >
 	 <h4 align="center"> Authentifier </h4>
   <form [formGroup]="angForm" (ngSubmit)="postadata(angForm)"  >
       <div class="row">
@@ -16,7 +15,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-12">
+        <div class="">
           <button class="btn btn-primary">Se connecter</button>
         </div>
       </div>
