--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,4 +1,4 @@
-nav{
+/* nav{
     height: 55px;
 }
 a{
@@ -20,4 +20,6 @@ li a {
   a:hover {
     background-color: #8c8d8a;
     display: block;
-}
+} */
+
+
