--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<br><br><br>
+<!-- <br><br><br>
 <div class="row" id="d">
   <div class="col-sm-3">
     <div class="card">
@@ -29,4 +29,16 @@
       </div>
     </div>
   </div>
-</div><br><br><br>
+</div><br><br><br> -->
+
+
+
+<div class="sidebar">
+  <br>
+  <br>
+  <br>
+  <a  class="btn btn-light" (click)="Etude()">Etudiant</a>
+  <a  class="btn btn-light" (click)="Etude()">Etudiant</a>
+  <a class="btn btn-light" (click)="consAd()">Les Notes</a>
+  <a  class="btn btn-light" (click)="consAd()">Les Notes</a>
+</div>
