--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 
 <h1 align="center"> Gestion de Scolarité </h1>
 
-<app-navbar></app-navbar>
-<br>
-<router-outlet></router-outlet>
-<br>
-<app-singup></app-singup>
+<!-- <app-navbar></app-navbar> -->
+
+  <router-outlet></router-outlet>
+
+<!-- <app-singup></app-singup> -->
