--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,15 @@
-.slider {
+/* .slider {
     text-align: center;
 }
 .slider img {
     width: 50%;
-}
+} */
+
+div.content {
+    margin-left: 200px;
+    padding: 1px 16px;
+    height: 1000px;
+  }
+  @media screen and (max-width: 700px) {
+    div.content {margin-left: 0;}}
+  
