--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,15 @@
 
-<div class="slider">
+<app-navbar></app-navbar>
+<!-- <div class="slider">
     <img [src]="Link" class="slider-image" alt="img">
-</div>   
+</div>    -->
+
+<!-- <app-sidebar></app-sidebar> -->
+
+<div class="content">
+    <!-- <h1>Hello</h1> -->
+    <router-outlet></router-outlet>
+    <div class="slider"  style="width:100%;height:10%;" >
+        <img [src]="Link" class="slider-image" alt="img">
+    </div>   
+</div>
