--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="alg">
+<!-- <div class="alg">
 <nav class="navbar navbar-expand-lg navbar navbar-primary bg-primary" >
   <div class="container-fluid">
     
@@ -13,6 +13,26 @@
       </li>
       <li class="nav-item">
           <a class="nav-link active" aria-current="page" routerLink="etudiant">Etudiant</a>
-      </li>
-       
-    
+      </li> -->
+      <nav class="navbar navbar-expand-lg navbar-primary bg-light">
+        <div class="container-fluid">
+
+          <a class="navbar-brand" href="#">Acceuil</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" routerLink="">Enseignant</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" routerLink="etudiant">Etudiant</a>
+              </li>
+            </ul>
+           
+              <a class="btn btn-outline-success" style="float: right" routerLink="Admin" >Se Connecter</a>
+           
+          </div>
+        </div>
+      </nav>
