des nouveaux modifications

--- a/src/app/ajout-classe/ajout-classe.component.html
+++ b/src/app/ajout-classe/ajout-classe.component.html
@@ -1,5 +1,5 @@
 <br>
-<div class="p-3 border bg-secondary" id="d">
+<div class="p-3 border bg-light	" id="d">
 	 <h4 align="center">Ajouter Etudiant</h4>
   <form [formGroup]= "form" name="form" (ngSubmit) = "submit()" >
  			 <div class="mb-3">
