--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<h1 align="center"> Gestion de Scolarité </h1>
+<!-- <h1 align="center"> Gestion de Scolarité </h1> -->
 
 <!-- <app-navbar></app-navbar> -->
 
