--- a/src/app/etudiant/etudiant.component.html
+++ b/src/app/etudiant/etudiant.component.html
@@ -1,7 +1,10 @@
 
 <br>
-<div class="p-3 border bg-secondary" id="d">
-	 <h4 align="center"> Entre votre classe & matricule pour consulter votre resultar </h4>
+<br>
+<div class="content" id="c">
+<h4 align="center"> Entre votre classe et matricule pour consulter votre resultar </h4>
+<br>
+<div class="p-4  bg-light" id="d">
   <form [formGroup]= "form" name="form" (ngSubmit) = "consultetudiant()" >
              <div class="mb-3">
 			  <label for="exampleFormControlInput1" class="form-label"><b>Matricule</b></label>
@@ -18,4 +21,6 @@
 			  
 			</div>
             <br/>
-			
+  </form>
+</div>
+</div>			
