--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -36,9 +36,11 @@
 <div class="sidebar">
   <br>
   <br>
-  <br>
-  <a  class="btn btn-light" (click)="Etude()">Etudiant</a>
-  <a  class="btn btn-light" (click)="Etude()">Etudiant</a>
-  <a class="btn btn-light" (click)="consAd()">Les Notes</a>
-  <a  class="btn btn-light" (click)="consAd()">Les Notes</a>
+  <br> 
+  <a  class="btn btn-light" (click)="Side()">Ajout etudiant</a>
+  <a  class="btn btn-light" (click)="Etude()">liste des etudiant</a>
+  <a class="btn btn-light" (click)="consAd()">Les sotes</a>
+  <a  class="btn btn-light" (click)="consAd()">Ajout proffeseur</a>
+  
 </div>
+
