--- a/src/app/etudiant/etudiant.component.css
+++ b/src/app/etudiant/etudiant.component.css
@@ -1,14 +1,19 @@
+#c{
+    
+}
+
 #d{
     width: 50%;
     margin:20px 25% 0 25%;
     background-color: blue;
 }
+
 .btn{
     margin-right: 5%;
 }
-h4 {
-    color: blanchedalmond;
+/* h4 {
+    color: rgb(94, 121, 207);
 }
 label{
-    color: blanchedalmond;
-}
+    color: rgb(94, 121, 207);;
+} */
