--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -50,7 +50,12 @@
       position: relative;
     }
     .sidebar a {float: left;}
+    
   
+  }
+  .content{
+    display: block;
+    float:  left;
   }
   
   /* On screens that are less than 400px, display the bar vertically, instead of horizontally */
