--- a/src/app/ajout-resultat/ajout-resultat.component.html
+++ b/src/app/ajout-resultat/ajout-resultat.component.html
@@ -43,7 +43,7 @@
             </div>
 			<div class="mb-3">
 			  <p><button type="reset" class="btn btn-primary">Annuler</button>
-              <button type="submit" class="btn" style="background:#52be80;">Ajouter</button></p>
+              <button type="submit" class="btn" (click)="addEtu()" style="background:#52be80;">Ajouter</button></p>
 			  
 			</div>
 			
