--- a/src/app/ajout-classe/ajout-classe.component.html
+++ b/src/app/ajout-classe/ajout-classe.component.html
@@ -16,7 +16,7 @@
             </div>
 			<div class="mb-3">
 			  <p><button type="reset" class="btn btn-primary">Annuler</button>
-              <button type="submit" class="btn" style="background:#52be80;">Ajouter</button></p>
+              <button type="submit" (click)="addEtu()" class="btn" style="background:#52be80;">Ajouter</button></p>
 			  
 			  
 			</div>
